--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>HenryYP @ Github
 </head>
 <body>
-  <h1>Henry YP Ho</h1>
+  <h1>Henry YP Ho :: Creative Coder + Director</h1>
+  <h2>Founder of <a href="http://monkiki.co" target="monkiki">monkiki &amp; co</a></h2>
 </body>
 </html>
