--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>HenryYP @ Github
+  <title>HenryYP @ Github</title>
 </head>
 <body>
   <h1>Henry YP Ho :: Creative Coder + Director</h1>
